// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Basic 1`] = `
<div
  className="css-1pdwlf"
>
  <button
    className="mdc-ripple-surface css-8tse7d"
    color="#FCB645"
    height={32}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={Object {}}
  >
    ラベル
  </button>
</div>
`;

exports[`Storyshots Button Icon 1`] = `
<div
  className="css-1pdwlf"
>
  <button
    className="mdc-ripple-surface css-9fvtz"
    color="#FCB645"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    size={40}
    style={Object {}}
  >
    <div
      className="css-10lfc66"
      size={18}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100%\\" height=\\"100%\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\" stroke=\\"currentColor\\" stroke-width=\\"3\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" class=\\"feather feather-heart\\"><path d=\\"M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z\\"></path></svg>",
          }
        }
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </button>
</div>
`;
